pfish       2005/11/09 11:18:48 UTC	(20051109-3729)
  Log:
  Lets show a working link to atheme in /INFO (services.atheme.org is no longer valid?)
  

  Changes:	Modified:
  +1 -1		trunk/src/version.sh (File Modified) 


jilles      2005/11/09 11:10:58 UTC	(20051109-3727)
  Log:
  LISTCHANS:
  - Do not snoop on listchans on self
  - Make the log message for listchans on self clearly different
    from listchans on another user
  

  Changes:	Modified:
  +1 -2		trunk/modules/nickserv/listchans.c (File Modified) 
  +1 -2		trunk/modules/userserv/listchans.c (File Modified) 


jilles      2005/11/09 11:09:39 UTC	(20051109-3725)
  Log:
  Unbreak compile.
  

  Changes:	Modified:
  +1 -0		trunk/modules/userserv/info.c (File Modified) 


alambert    2005/11/09 06:14:38 UTC	(20051109-3723)
  Log:
  HelpServ: send CTCP replies from the right nick

  Changes:	Modified:
  +1 -1		trunk/modules/helpserv/main.c (File Modified) 


pfish       2005/11/09 06:13:52 UTC	(20051109-3721)
  Log:
  Update flags for UserServ and fix a crash in the last seen code.
  

  Changes:	Modified:
  +15 -2	trunk/modules/userserv/info.c (File Modified) 


alambert    2005/11/09 06:13:21 UTC	(20051109-3719)
  Log:
  US FREEZE: send messages from the right nickname

  Changes:	Modified:
  +2 -2		trunk/modules/userserv/freeze.c (File Modified) 


alambert    2005/11/09 06:11:55 UTC	(20051109-3717)
  Log:
  MemoServ: send CTCP responses from the right nick

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/main.c (File Modified) 


alambert    2005/11/09 05:52:16 UTC	(20051109-3715)
  Log:
  chanacs_user_has_flag(): if we're an alias, only ask about the parent nickname (per w00t)

  Changes:	Modified:
  +28 -2	trunk/src/node.c (File Modified) 


pfish       2005/11/09 05:50:17 UTC	(20051109-3713)
  Log:
  LISTCHANS: Port new version over to UserServ, and some minor improvments for both.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/listchans.c (File Modified) 